<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/error_icon"
        android:src="@drawable/error_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:background="@color/red"
        android:contentDescription="@string/error_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/error_title"/>

    <TextView
        android:id="@+id/error_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin"
        android:textSize="@dimen/titles_size"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/error_string_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_icon"/>

    <TextView
        android:id="@+id/error_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="@dimen/titles_size"
        android:textAlignment="center"
        android:text="@string/error_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_title"
        app:layout_constraintBottom_toTopOf="@id/go_back_button_fragment"/>

    <Button
        android:id="@+id/go_back_button_fragment"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_marginTop="@dimen/titles_top_margin"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_description_text" />


</androidx.constraintlayout.widget.ConstraintLayout>